# site_mostruario_barbearia_rust_ts

./: Cargo.toml
.sqlx/: query-833d492ea17069196e22d919e2f7f38ed9fd540c4ab81792dc154a10036d6084.json
src/: auth.rs  db.rs  errors.rs  extractors.rs  handlers.rs  main.rs  models.rs  routes.rs
src/extractors/: image_upload.rs
